--- a/Analysis II/main.tex
+++ b/Analysis II/main.tex
@@ -525,7 +525,7 @@ $$Curl \neq 0 \rightarrow \text{not a potential}$$
   \subsection{Tangent space}
   The approximation of the function at $x_0$ using one derivative.
   %$$\{(x, y) \in \R^n \times \R^m \;|\; y = f(x_0) + u(x - x_0)\}$$
-  $$\{(x, y) \in \R^n \times \R^m \;|\; g(x, y) = f(x_0, y_0) + Df(x_0, y_0) +  
+  $$\{(x, y) \in \R^n \times \R^m \;|\; g(x, y) = f(x_0, y_0) + Df(x_0, y_0)
 	\begin{pmatrix} x - x_0 \\
 			     y - y_0
 	\end{pmatrix}$$
@@ -539,6 +539,19 @@ $$Curl \neq 0 \rightarrow \text{not a potential}$$
       y-4
     \end{pmatrix}
   \end{align*}
+\BoxEnd
+\BoxStart
+The equation $z = 2y^2 + x^2$ describes a surface $S$ in $\R^3$, which contains the point $P = (1, 1, 3)$. Find the coordinates of the other point of $S$ that lies on the normal to $S$ at $P$ \\
+
+The normal at the point $(x, y, z)$ is given by $$\nabla f = (2x, 4y, -1)$$
+The normal direction at P is thus given by $$n(P) = (2, 4, -1)$$ The normal line through P is thus $$g : R \rightarrow \R^3, g(t) = (1, 1, 3) + t(2, 4, -1)$$
+To find the other point that lies in $im(g) \cap S$, we need to solve $$f(g(t)) = 0: (1 + 2t)^2 + 2(1 + 4t)^2 - 3 + t = 21t + 36t^2 = 0$$
+We get $t = 0$ or $t = -\frac{21}{36} = -\frac{7}{12}$. For t = 0 we get $P$ and the other intersection point is $$P' = \left(-\frac{1}{6}, -\frac{4}{3}, \frac{43}{12}\right)$$
+\BoxEnd
+
+\BoxStart
+What is the tangent plane of the ellipsoid: $$2x^2 + 2y^2 + \frac{1}{4}z^2 = 1$$ which is parallel to the plane $x + y + z = 1$ \\
+We look for the points on the ellipsoid for which the gradient is parallel to the normal vector $(1, 1, 1)$ of the plane. We let $f(x, y, z) = 2x^2 + 2y^2 + \frac{z^2}{4}$ and thus we must have $$\nabla f(x, y, z) =(4x, 4y, \frac{z}{2}) = a(1, 1, 1)$$ for a real number $a$. It follows that $x = y = \frac{a}{4} , z = 2a$ Substituting into the equation for the ellipsoid, we obtain $$1 = f(x, y, z) = \frac{a^2}{8} + \frac{a^2}{8} + a^2 = \frac{5}{4} a^2 \Rightarrow a^{\pm} = \pm \frac{2}{\sqrt{5}}$$ In order to be parallel to the plane $x + y + z = 1$, the tangent plane has to satisfy the equation $x + y + z = b$ for $b \in R$. Since $$(x, y, z) =(\frac{a}{4} , \frac{a}{4} , 2a)=( \frac{1}{2\sqrt{5}} ,\frac{1}{2\sqrt{5}} , \frac{4}{2\sqrt{5}} )$$ (or negative)must be satisfied, we find that $$b^{\pm} = \pm\sqrt{5}$$ The tangent planes are therefore $x + y + z = \pm\sqrt{5}$
 \BoxEnd
   % ---------- Chain rule -------------------
   \subsection{Chain rule}
@@ -835,6 +848,8 @@ T_3f((0,0); (x,y)) &= f(0,0) + \frac{\partial f(0,0)}{\partial x}x + \frac{\part
             \int_{-\gamma} f \; ds = - \int_\gamma f \; ds
           \end{align*}
   \end{enumerate}
+Useful trick\\
+In general if $\gamma : [a, b] \rightarrow \R^n(t \rightarrow \gamma(t))$ is a curve, then $\alpha : [a, b] \rightarrow \R^n$ with $\alpha(t) := \gamma(b + a - t)$ traces the same curve in the opposite direction.
 \subsubsection{Length of curve (Bogenlänge)}
 The length of a curve (Bogenlänge) from a function $f$ on the interval $[a, b]$ is 
 $$ L = \int_a^b \sqrt{1 + (f'(x))^2}dx$$
