--- a/Analysis II/main.tex
+++ b/Analysis II/main.tex
@@ -551,7 +551,7 @@ We get $t = 0$ or $t = -\frac{21}{36} = -\frac{7}{12}$. For t = 0 we get $P$ and
 
 \BoxStart
 What is the tangent plane of the ellipsoid: $$2x^2 + 2y^2 + \frac{1}{4}z^2 = 1$$ which is parallel to the plane $x + y + z = 1$ \\
-We look for the points on the ellipsoid for which the gradient is parallel to the normal vector $(1, 1, 1)$ of the plane. We let $f(x, y, z) = 2x^2 + 2y^2 + \frac{z^2}{4}$ and thus we must have $$\nabla f(x, y, z) =(4x, 4y, \frac{z}{2}) = a(1, 1, 1)$$ for a real number $a$. It follows that $x = y = \frac{a}{4} , z = 2a$ Substituting into the equation for the ellipsoid, we obtain $$1 = f(x, y, z) = \frac{a^2}{8} + \frac{a^2}{8} + a^2 = \frac{5}{4} a^2 \Rightarrow a^{\pm} = \pm \frac{2}{\sqrt{5}}$$ In order to be parallel to the plane $x + y + z = 1$, the tangent plane has to satisfy the equation $x + y + z = b$ for $b \in R$. Since $$(x, y, z) =(\frac{a}{4} , \frac{a}{4} , 2a)=( \frac{1}{2\sqrt{5}} ,\frac{1}{2\sqrt{5}} , \frac{4}{2\sqrt{5}} )$$ (or negative)must be satisfied, we find that $$b^{\pm} = \pm\sqrt{5}$$ The tangent planes are therefore $x + y + z = \pm\sqrt{5}$
+We look for the points on the ellipsoid for which the gradient is parallel to the normal vector $(1, 1, 1)$ of the plane. We let $f(x, y, z) = 2x^2 + 2y^2 + \frac{z^2}{4}$ and thus we must have $$\nabla f(x, y, z) =(4x, 4y, \frac{z}{2}) = a(1, 1, 1)$$ for a real number $a$. It follows that $x = y = \frac{a}{4} , z = 2a$ Substituting into the equation for the ellipsoid, we obtain $$1 = f(x, y, z) = \frac{a^2}{8} + \frac{a^2}{8} + a^2 = \frac{5}{4} a^2 \Rightarrow a^{\pm} = \pm \frac{2}{\sqrt{5}}$$ In order to be parallel to the plane $x + y + z = 1$, the tangent plane has to satisfy the equation $x + y + z = b$ for $b \in R$. Since $$(x, y, z) =(\frac{a}{4} , \frac{a}{4} , 2a)=( \frac{1}{2\sqrt{5}} ,\frac{1}{2\sqrt{5}} , \frac{4}{\sqrt{5}} )$$ (or negative)must be satisfied, we find that $$b^{\pm} = \pm\sqrt{5}$$ The tangent planes are therefore $x + y + z = \pm\sqrt{5}$
 \BoxEnd
   % ---------- Chain rule -------------------
   \subsection{Chain rule}
@@ -1587,8 +1587,6 @@ Inhomogenous otherwise.
   \includegraphics[width=6cm]{multiplechoice3.png} 
   \includegraphics[width=6cm]{ex1.png} 
   \includegraphics[width=6cm]{ex2.png} 
-  \includegraphics[width=6cm]{ex3_1.png} 
-  \includegraphics[width=6cm]{ex3_2.png} 
 \end{center}
 
 
