--- a/WuS/Source/zip/main.tex
+++ b/WuS/Source/zip/main.tex
@@ -593,6 +593,9 @@ contents={}
     \end{cases}
   \end{align*}
   wir schreiben kurz $X \sim U(a, b)$.
+  \begin{align*}
+    E[X] = \frac{a + b}{2} &  & Var[X] = \frac{(b - a + 1)^2 - 1}{12}
+  \end{align*}
   \subsection*{Exponentialverteilung}
   Die Exponentialverteilung mit Parameter $\lambda > 0$ ist das stetige Analogon
   der Geometrischen Verteilung. Die zugehörige Zufallsvariable $X$ hat
