--- a/IML/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Imbalance.tex
+++ b/IML/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Imbalance.tex
@@ -1,3 +1,4 @@
+% chktex-file 44
 \section*{Imbalance}
 
 up-/downsampling
@@ -7,9 +8,18 @@ Scale loss by cost: $l_{CS}(w;x,y) = c_\pm l(w;x,y)$
 
 \subsection*{Metrics}
 $n = n_+ + n_-$, $n_+ = TP + FN$, $n_- = TN + FP$\\
-Accuracy: $\frac{TP+TN}{n}$, 
-Precision: $\frac{TP}{TP+FP}$\\ 
-Recall/TPR: $\frac{TP}{n_+}$, 
+Accuracy: $\frac{TP+TN}{n}$,
+Precision: $\frac{TP}{TP+FP}$\\
+Recall/TPR: $\frac{TP}{n_+}$,
 FPR: $ \frac{FP}{n_-}$\\
 F1 score: $\frac{2TP}{2TP+FP+FN} = \frac{2}{\frac{1}{prec} + \frac{1}{rec}}$\\
 ROC Curve: $y = $TPR, $x = $FPR
+
+% ...
+\begin{tabular}{|c|c|}
+    \hline
+    \textcolor{green}{TP} & \textcolor{red}{FP} \\
+    \hline
+    \textcolor{red}{FN} & \textcolor{green}{FP} \\
+    \hline
+\end{tabular}
