--- a/probability-and-statistics/Source/Konzepte.tex
+++ b/probability-and-statistics/Source/Konzepte.tex
@@ -1,3 +1,7 @@
+% chktex-file 12
+% chktex-file 8
+
+
 \hypertarget{sec:0}{\section{Konzepte}}
 \subsection*{Ereignisraum}
 Die Menge $\Omega \neq \emptyset$ aller möglichen Ergebnisse des betrachteten
@@ -166,6 +170,7 @@ die Varianz von $X$. Es gilt weiter:
   \item $Var[X] = E[X^2] - {E[X]}^2$
   \item $Var[a \cdot X + b] = a^2 \cdot Var[X]$
   \item $Var[X - Y] = Var[X] +  {-1}^2 \cdot Var[Y]$
+  \item $Var(X+Y) = Var(X) + Var(Y) + 2Cov(X,Y)$
 \end{itemize}
 \subsection*{Standardabweichung}
 $$
