--- a/probability-and-statistics/Source/Schätzer.tex
+++ b/probability-and-statistics/Source/Schätzer.tex
@@ -1,3 +1,7 @@
+% chktex-file 13
+% chktex-file 12
+% chktex-file 11
+
 \hypertarget{sec:3}{\section{Schätzer}}
 \subsection*{Schätzer}
 Wir suchen ein Modell für eine Stichprobe $\zufallsvariablen$ und haben einen
