--- a/probability-and-statistics/Source/Zufallsvarablen.tex
+++ b/probability-and-statistics/Source/Zufallsvarablen.tex
@@ -50,7 +50,7 @@ hat den Wertebereich $\W (X) = [a, b]$, sowie
 \end{align*}
 wir schreiben kurz $X \sim U (a, b)$.
 \begin{align*}
-  E[X] = \frac{a + b}{2} &  & Var[X] = \frac{ (b - a + 1)^2 - 1}{12}
+  E[X] = \frac{a + b}{2} &  & Var[X] = \frac{{(b - a)}^2}{12}
 \end{align*}
 \subsection*{Exponentialverteilung}
 Die Exponentialverteilung mit Parameter $\lambda > 0$ ist das stetige Analogon
