--- a/probability-and-statistics/Source/Statistik.tex
+++ b/probability-and-statistics/Source/Statistik.tex
@@ -68,11 +68,9 @@ sitzt oder nicht. Wir gehen dabei wir folgt vor:
   und somit verwerfen wir $H_0$ für alljene $k \in \N$, für welche $P_{H_0} (X \geq k) \leq 0.05$. 
   Durch Ablesen von der Binomialtabelle erhalten wir $P_{H_0} (X \geq 58) = 1 - P_{H_0} (X \leq 57) = 0.0666$ und $P_{H_0} (X \geq 59) = 0.0443$.
   Der Verwerfungsbereich V ist also gegeben durch $V = {k \in \N : k \geq 59}$.
+  \item Testentscheidung: Christoph hat von den 100 Mal 60 Mal korrekt vorhergesagt und somit
+  verwerfen wir $H_0$, denn $60 \in V$.
 \end{itemize}
-
-
-
-
 \BoxEnd{}
 
 \subsection*{Likelihood Quotient}
