--- a/introduction-to-machine-learning/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Clustering.tex
+++ b/introduction-to-machine-learning/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Clustering.tex
@@ -3,11 +3,20 @@
 
 $\hat{R}(\mu) = \sum_{i=1}^n \underset{j\in\{1,...k\}}{\operatorname{min}}||x_i-\mu_j||_2^2$\\
 $\hat{\mu} =  \underset{\mu}{\operatorname{argmin}} ~ \hat{R}(\mu)$ ...non-convex, NP-hard \\
-Algorithm (Lloyd's heuristic): Choose starting centers, assign points to closest center, update centers to mean of each cluster, repeat
-
-%\subsection*{k-mean++}
-%- Start with random data point as center\\
-%- Add centers 2 to k randomly, proportionally to squared distance to closest selected center\\
-%for $j=2$ to $k$:
-%$i_j$ sampled with prob.\\
-%$P(i_j=i) = \frac{1}{z} \underset{1\leq l<j}{min}||x_i-\mu_l||_2^2$; $\mu_j \leftarrow x_{i_j}$
+Algorithm (Lloyd's heuristic): 
+\begin{itemize}
+    \item Choose starting centers
+    \item assign points to closest center
+    \item update centers to mean of each cluster
+    \item repeat
+    \item can take exponentially may steps to converge
+\end{itemize}
+\subsection*{k-mean++}
+\begin{itemize}
+    \item Start with random data point as center
+    \item Add centers 2 to k randomly
+    \item  proportionally to squared distance to closest selected center
+\end{itemize}
+for $j=2$ to $k$: \\
+$i_j$ sampled with prob.\\
+$P(i_j=i) = \frac{1}{z} \underset{1\leq l<j}{\min}||x_i-\mu_l||_2^2$; $\mu_j \leftarrow x_{i_j}$
