--- a/introduction-to-machine-learning/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Kernels.tex
+++ b/introduction-to-machine-learning/ETH_IML_Cheatsheet-main/ETH_IML_Cheatsheet-main/IML_Cheatsheet/Kernels.tex
@@ -18,9 +18,9 @@ Positive semi-definite matrices $\Leftrightarrow$ kernels $k$
 
 \subsection*{Important kernels}
 Linear: $k(x,y)=x^T y$\\
-Polynomial: $k(x,y)=(x^T y + 1)^d$\\
-Gaussian: $k(x,y) = exp(-||x-y||_2^2/(2h^2))$\\
-Laplacian: $k(x,y) = exp(-||x-y||_1/h)$
+Polynomial: $k(x,y)=,{(x^T y + 1)}^d$\\
+Gaussian: $k(x,y) = \exp(-||x-y||_2^2/(2h^2))$\\
+Laplacian: $k(x,y) = \exp(-||x-y||_1/h)$
 
 \subsection*{Composition rules}
 Valid kernels $k_1, k_2$, also valid kernels:
@@ -30,12 +30,12 @@ $f(k_1)$ if $f$ polynomial with pos. coeffs. or exponential
 \subsection*{Reformulating the perceptron}
 
 Ansatz: $w^* \in \operatorname{span}(X) \Rightarrow w = \sum_{j=1}^n \alpha_j y_j x_j$\\
-$\alpha^*= \underset{\alpha \in \mathbb{R}^n}{\operatorname{argmin}} \sum_{i=1}^n \operatorname{max}(0, - \sum_{j=1}^n \alpha_j y_i y_j x_i^T x_j)$
+$\alpha^*= \underset{\alpha \in \mathbb{R}^n}{\operatorname{argmin}} \sum_{i=1}^n \operatorname{\max}(0, - \sum_{j=1}^n \alpha_j y_i y_j x_i^T x_j)$
 
 \subsection*{Kernelized perceptron and SVM}
 Use $\alpha^T k_i$ instead of $w^T x_i$,\\
 use $\alpha^T D_y K D_y \alpha$ instead of $||w||_2^2$\\ 
-$k_i=[y_1 k(x_i,x_1), ..., y_n k(x_i,x_n)]$, $D_y = \operatorname{diag}(y)$\\
+$k_i=[y_1 k(x_i,x_1), \ldots, y_n k(x_i,x_n)]$, $D_y = \operatorname{diag}(y)$\\
 Prediction: $\hat{y} = \operatorname{sign}(\sum_{i=1}^n \alpha_i y_i k(x_i, \hat{x}))$
 SGD update: $\alpha_{t+1} = \alpha_t$, if mispredicted: $\alpha_{t+1,i} = \alpha_{t,i} + \eta_t$ (c.f. updating weights towards mispredicted point)
 
@@ -45,5 +45,5 @@ $\alpha^*= \underset{\alpha}{\operatorname{argmin}} ||\alpha^T K - y||_2^2 + \la
 Prediction: $\hat{y} = \sum \limits_{i=1}^n \alpha_i k(x_i,\hat{x})$
 
 \subsection*{k-NN}
-$y = \operatorname{sign} \big( \sum_{i=1}^n y_i [x_i \text{ among } k \text{ nearest neigh-}$ $\text{bours of } x] \big)$ --
-No weights $\Rightarrow$ no training! But depends on all data :(
+$y = \operatorname{sign} \big( \sum_{i=1}^n y_i [x_i \text{ among } k \text{ nearest neigh-}$ $\text{bours of } x] \big)$ -
+No weights $\Rightarrow$ no training! But depends on all data 
