--- a/introduction-to-machine-learning/iml-cheatsheet-main/main.tex
+++ b/introduction-to-machine-learning/iml-cheatsheet-main/main.tex
@@ -14,7 +14,7 @@
 \usepackage{ctable}
 
 % Set page margins
-\geometry{top=.5cm, left=.5cm, right=.5cm, bottom=.5cm}
+\geometry{top=.0cm, left=.0cm, right=.0cm, bottom=.0cm}
 
 % Set indentation
 \setlength{\parindent}{0pt}
@@ -42,9 +42,8 @@
 
 \newcommand*{\myfont}{\fontfamily{phv}\selectfont}
 
-\titleformat*{\section}{\myfont\bfseries\color{Emerald}}
-\titleformat*{\subsection}{\myfont\bfseries\color{purple}}
-
+\titleformat*{\section}{\fontsize{11}{11}\selectfont\myfont\bfseries\color{Emerald}}
+\titleformat*{\subsection}{\fontsize{11}{11}\selectfont\myfont\bfseries\color{purple}}
 \begin{document}
 \begin{multicols*}{4}
 
