--- a/probability-and-statistics/Source/main.tex
+++ b/probability-and-statistics/Source/main.tex
@@ -4,10 +4,10 @@
 % ANOTHER IMPORTANT NOTE: The Boxlayout with Titles was copied from here: https://www.overleaf.com/articles/130-cheat-sheet/ntwtkmpxmgrp
 % The Credit goes to Drew Ulick
 
-\documentclass[8pt]{extarticle}
+\documentclass[10pt]{extarticle}
 % Article
 % \documentclass[9pt]{extarticle}
-\usepackage[landscape, left=0.50cm, top=0.75cm, right=0.50cm, bottom=1.0cm, footskip=15pt]{geometry}
+\usepackage[landscape, left=0.20cm, top=0.2cm, right=0.20cm, bottom=0.6cm, footskip=15pt]{geometry}
 \usepackage{background}
 \usepackage{etoolbox}
 \usepackage{graphicx}
@@ -19,8 +19,16 @@
 \usepackage{physics}
 \usepackage{enumerate}
 
-%\usepackage{sectsty}
-%\subsubsection*font{\normalfont\large\itshape\underline}
+\usepackage{xcolor}
+\usepackage{tcolorbox}
+
+\usepackage[compact]{titlesec}
+\usepackage{paralist}
+
+\usepackage{tabularx}
+\usepackage{ctable}
+
+% Set page margins
 
 % Tables
 \usepackage{tabularx, multirow}
@@ -30,9 +38,6 @@
 \def\BoxStart{\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]}
     \def\BoxEnd{\end{tcolorbox}}
 
-% color text
-\usepackage{xcolor}
-\usepackage{tcolorbox}
 % image directory
 \graphicspath{ {./assets/} }
 
@@ -64,40 +69,7 @@
 \newlength\mylen{}
 \newlength\mylena{}
 
-% style for the subsection* tabs
-\tikzset{
-  tab/.style={
-      text width=\mylena,
-      draw=gray,
-      thick,
-      rectangle,
-      rounded corners=12pt,
-      align=center,
-      text width=53pt,
-      inner sep=0pt,
-      fill=gray!20,
-      font=\sffamily\LARGE
-    }
-}
-% style for the current subsection* tab
-\tikzset{selectedtab/.style={tab,color=white,fill=gray!90}}
 
-% the page number is showed in the background material
-%\pagestyle{empty}
-
-% define the tab names
-\newcounter{mylistcounter}
-
-\def\saveitem#1{%
-  \stepcounter{mylistcounter}%
-  \expandafter\def\csname mylist\themylistcounter\endcsname{#1}}
-
-\forcsvlist{\saveitem}{%
-  Differential Equ.,
-  $\R^n$ Differentials,
-  $\R^n$ Integrals,
-  Other
-}%
 \renewcommand*{\arraystretch}{2}
 \allowdisplaybreaks{}
 
@@ -112,6 +84,18 @@
   opacity=1,
   contents={}
 }
+
+% Set indentation
+\setlength{\parindent}{2pt}
+\setlength{\parskip}{0.02cm}
+\setlength{\columnsep}{5pt}
+\raggedcolumns
+\setlength{\abovedisplayskip}{2pt}
+\setlength{\belowdisplayskip}{2pt}
+\setlength{\abovedisplayshortskip}{2pt}
+\setlength{\belowdisplayshortskip}{2pt}
+
+
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
@@ -136,9 +120,14 @@
 \newcommand{\bs}{\boldsymbol}
 \newcommand{\with}{\;|\;}
 
+\titlespacing{\section}{0pt}{0.3ex}{0ex}
+\titlespacing{\subsection}{0pt}{0ex}{0ex}
+\linespread{0.7}
+\allowdisplaybreaks{}
 
+\titleformat*{\section}{\fontsize{11}{11}\bfseries\color{blue}}
+\titleformat*{\subsection}{\fontsize{11}{11}\bfseries\color{purple}}
 % define box
-\tikzstyle{fancytitle} =[fill=black, text=white, font=\bfseries]
 \begin{document}
 \setlength{\columnseprule}{0.4pt}
 \pagenumbering{arabic}
