--- a/probability-and-statistics/Source/Kapitel3.tex
+++ b/probability-and-statistics/Source/Kapitel3.tex
@@ -1,5 +1,5 @@
 % chktex-file 8
-\hypertarget{sec:1}{\section{Diskrete Verteilungen}}
+{\section{Wichtige diskrete Verteilungen}}
 \subsection*{Diskrete Gleichverteilung}
 Die diskrete Gleichverteilung auf einer endlichen Menge $\W = \{ x_1, \dots,
   x_n \}$ gehört zu einer Zufallsvariablen $X$ mit Wertebereich $\W$ und
