--- a/probability-and-statistics/Source/Kapitel6.tex
+++ b/probability-and-statistics/Source/Kapitel6.tex
@@ -1,4 +1,4 @@
-\hypertarget{sec:4}{\section{Statistik}}
+{\section{Statistik}}
 \subsection*{$\X^2$-Verteilung}
 Die $\X^2$- Verteilung mit $n$ Freiheitsgraden (bez. $\X^2_n$) gehört zu einer
 stetigen Zufallsvariable $Y$ mit Dichtefunktion:
