--- a/probability-and-statistics/Source/Kapitel7.tex
+++ b/probability-and-statistics/Source/Kapitel7.tex
@@ -2,7 +2,7 @@
 % chktex-file 12
 % chktex-file 11
 
-\hypertarget{sec:3}{\section{Schätzer}}
+{\section{Schätzer}}
 \subsection*{Schätzer}
 Wir suchen ein Modell für eine Stichprobe $\zufallsvariablen$ und haben einen
 Parameteraum $\vartheta \subseteq \varTheta$ und für jedes $\vt$ einen
