--- a/probability-and-statistics/Source/main.tex
+++ b/probability-and-statistics/Source/main.tex
@@ -135,13 +135,16 @@
 
 
 
-  \input{Konzepte}
-  \input{Diskrete_Verteilung}
-  \input{Zufallsvarablen}
-  \input{Tabellen}
-  \input{Schätzer}
-  \input{Statistik}
-  \input{Verteilungen}
+\input{Kapitel1}
+\input{Kapitel2}
+\input{Kapitel3}
+\input{Kapitel4}
+\input{Kapitel5}
+\input{Kapitel6}
+\input{Kapitel7}
+\input{Kapitel8}
+\input{Kapitel9}
+\input{Kapitel10}
 
  
 \end{multicols*}
