--- a/probability-and-statistics/Source/Kapitel7.tex
+++ b/probability-and-statistics/Source/Kapitel7.tex
@@ -111,6 +111,7 @@ sei $\zufallsvariablen$ i.i.d. unter dem Wahrscheinlichkeitsraum $ (\Omega, \F,
 \subsection*{Momentenschätzer}
 Der Vektor $\hat{\vt} (X_1, \dots, X_m)$ heisst Momentenschätzer des Parameters
 $\vt$.
+\BoxStart{}
 \subsection*{Beispiel: Normalverteile Stichprobe}
 Sei $\zufallsvariablen$ i.i.d. $\Normalverteilt$-verteilt mit unbekannten
 Parametern $\vt = (\mu, \sigma^2)$. Damit berechnen wir mit der $\log$ max
@@ -133,3 +134,4 @@ Seien $\zufallsvariablen$ i.i.d. $\sim \Normalverteilt$. Dann gilt:
   \item $\overline{X}_n$ und $S^2$ sind unabhängig
   \item $\frac{\overline{X}_n - \mu}{S / \sqrt{n}} = \frac{ \frac{\overline{X}_n - \mu}{\sigma / \sqrt{n}} }{S / \sigma} = \frac{ \frac{\overline{X}_n - \mu}{\sigma / \sqrt{n}} }{\sqrt{\frac{1}{n-1} \frac{n-1}{\sigma^2} S^2}} \sim t_{n-1}$
 \end{itemize}
+\BoxEnd{}
