--- a/probability-and-statistics/Source/Kapitel9.tex
+++ b/probability-and-statistics/Source/Kapitel9.tex
@@ -12,11 +12,13 @@ Es gilt:
   \item $a+c, b+c \in I: \quad \int_a^b f (t + c) \; dt = \int_{a+c}^{b+c} f (x) \; dx$
   \item \textbf{Logarithmus} $\int \frac{f' (t)}{f (t)} \; dt = \log (\abs{f (x)})$
 \end{itemize}
+\BoxStart{}
 \subsection*{Substitution Beispiel}
 \begin{align*}
   \int \cos (x^2) 2x \; dx &  & u = x^2                              \\
   \int \cos (u) du         &  & \frac{du}{dx} = \frac{dx^2}{dx} = 2x
 \end{align*}
+\BoxEnd{}
 \subsection{Ableitungen}
 \begin{center}
   \begin{tabularx}{\linewidth}{c>{\centering\arraybackslash}Xc}
